BE cleand up